tests/snapshots/parser__bindings__var_expression.snap
---
source: tests/parser.rs
expression: "parse(\"var x = 2 + 3\")"
---
Ok(
    [
        Var {
            name: "x",
            value: Binary {
                op: Add,
                lhs: Int(
                    2,
                    Span {
                        start: 8,
                        end: 9,
                    },
                ),
                rhs: Int(
                    3,
                    Span {
                        start: 12,
                        end: 13,
                    },
                ),
                span: Span {
                    start: 8,
                    end: 13,
                },
            },
            span: Span {
                start: 0,
                end: 13,
            },
        },
    ],
)
