tests/snapshots/parser__bindings__var_missing_equals.snap
---
source: tests/parser.rs
expression: "parse(\"var x 5\")"
---
Err(
    ParseError {
        message: "expected `=` after binding name, found Int(5)",
        span: Span {
            start: 6,
            end: 7,
        },
    },
)
