tests/snapshots/parser__bindings__var_missing_name.snap
---
source: tests/parser.rs
expression: "parse(\"var = 5\")"
---
Err(
    ParseError {
        message: "expected identifier after `var`, found Eq",
        span: Span {
            start: 4,
            end: 5,
        },
    },
)
