tests/snapshots/parser__bindings__var_missing_value.snap
---
source: tests/parser.rs
expression: "parse(\"var x =\")"
---
Err(
    ParseError {
        message: "expected expression after `=`: unexpected end of input",
        span: Span {
            start: 7,
            end: 7,
        },
    },
)
