tests/snapshots/parser__bindings__var_simple.snap
---
source: tests/parser.rs
expression: "parse(\"var x = 5\")"
---
Ok(
    [
        Var {
            name: "x",
            value: Int(
                5,
                Span {
                    start: 8,
                    end: 9,
                },
            ),
            span: Span {
                start: 0,
                end: 9,
            },
        },
    ],
)
