tests/snapshots/parser__bindings__var_then_use.snap
---
source: tests/parser.rs
expression: "parse(\"var x = 1\\nprint(x)\")"
---
Ok(
    [
        Var {
            name: "x",
            value: Int(
                1,
                Span {
                    start: 8,
                    end: 9,
                },
            ),
            span: Span {
                start: 0,
                end: 9,
            },
        },
        Expr(
            Call {
                callee: Identifier(
                    "print",
                    Span {
                        start: 10,
                        end: 15,
                    },
                ),
                args: [
                    Identifier(
                        "x",
                        Span {
                            start: 16,
                            end: 17,
                        },
                    ),
                ],
                span: Span {
                    start: 10,
                    end: 18,
                },
            },
        ),
    ],
)
